    those used for authz and tarpit, making many things faster and cached
    queries around 4 times faster than the already optimized speed
  - many small performance improvements, changes to get around Groovy and
    Java quirks
- Change components to load in reverse of order initialized (later
  components override earlier ones)
- User Facade
  - Added support for login via HTTP Basic Authorization, mostly for
    things like RESTful services and support for clients using it
- Entity Facade
  - Allow (optional) reference of entity by package-name + entity-name,
  - Change framework to reference all its entities by fully qualified name
  - Allow separator (hash) between title and related-entity-name in
    relationship name now that related-entity-name may be packages and
    such, and looks funny
  - Primary sequenced ID banking for better performance when creating
    records with sequenced single field primary key (default bank size 50)
  - Change lastUpdatedStamp to tx timestamp to sync/export/etc data without
    splitting transactions
  - Supports seed-data element in entity and extend-entity elements so
    that seed data can be defined and managed along with entity definitions
  - Option to disable Entity ECAs during data load
  - Isolate cache clearing failures, don't ever kill calling method (ie
    never throw an exception/throwable)
- Screen Facade
  - List multi form submit button below and not in own column
  - Allow field, auto-fields-entity, and auto-fields-service to appear in
    any order and preserve that order when exploding the form definition
  - Auto Screen move Edit button on list forms to left side
  - If form transition has a single service (service-call instead of
    actions elements) then automatically use that service for validation
    information for fields with matching name
  - Improved handling of context and error parameters to more cleanly and
    easily repopulate forms after a server-side error